# Kaleidoscope-LLVM18

./: .clang-format  .gitignore  CMakeLists.txt  README.md  code.test  op.test  recompile.sh
include/: KaleidoSopceJIT.h  lexer.h  parser.h  parser_JIT.h
src/: CMakeLists.txt  compiler_type.h  driver.h  lexer.cpp  lexer.h  logger.cpp  logger.h  main_aot.cpp  main_jit.cpp  parser.cpp  parser.h  parser_JIT.cpp  token.h
src/ast/: ast.h  expr_ast.cpp  expr_ast.h  function_ast.cpp  function_ast.h  op_ast.h  prototype_ast.cpp  prototype_ast.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: driver.h  parser.h  parser_env.h
src/utils/: utils.cpp  utils.h
